fix css: overlap of header image and whats-tex-button

--- a/themes/freecycle/style.css
+++ b/themes/freecycle/style.css
@@ -11,6 +11,13 @@ Tags: buddypress
 
 /*ページ全体の枠組み*/
 
+@media all {
+	p#wpg-login{
+		background: #fff;
+		margin: 0;
+	}
+}
+
 @media screen and (min-width: 0px) and (max-width: 480px) {
 
 a:link { color: #000080; }
@@ -38,6 +45,7 @@ input[type="button" ][disabled="true"]:hover{
 }
 
 html{
+	background: #fffacd !important;
 	width: 100%;
 	height: 100%;
 }
@@ -246,7 +254,6 @@ header{
 	background: white;
 	margin: 0;
 	clear: both;
-	/*margin-top: 20px;*/
 }
 
 div#header_menu{
@@ -335,16 +342,9 @@ div.grobal_nav_div_sp{
 
 div#header_copy img{
 	margin: 0 auto;
-display: block;
-padding: 0;
-width: 85%;
-border-radius: 5px;
-}
-
-
-div#header_copy{
-	height: 150px;
-	margin-top: 50px;
+	display: block;
+	padding: 0;
+	border-radius: 5px;
 }
 
 /*---------------------------------------------------
@@ -445,7 +445,8 @@ div.login_form_button button:hover{
 
 div.header_img_navi{
 	width: 100%;
-	height: 150px;
+	height: auto;
+	margin: 20px auto 0 auto;
 }
 
 	
@@ -554,22 +555,6 @@ nav li a:hover {
 nav li:last-child a {
     border: none;
 }*/
-
-/*-------------------------facebook,twitterログインボタン--------------------------------------*/
-p#wpg-login{
-	background-image: none;
-	margin: 0;
-}
-
-a.fb_button:link, .fb_button:visited, .fb_button_rtl:link, .fb_button_rtl:visited {
-	width:50%;
-	margin: 2px 0 0 2px;
-}
-
-a.wpg_tw_btn{
-	width: 150px;
-	height: 28px;
-}
 
 
 /*
@@ -691,8 +676,8 @@ select#cat{
 */
 div.whats-tex-button{
 	background-color: #fff;
-	padding:	0;
-	margin: 40px 0 10px 0;
+	padding: 0;
+/*	margin: 120px 0 10px 0;*/
 }
 a.whats-tex-button{
 	width:90%;
@@ -1132,7 +1117,7 @@ input[type="button" ][disabled="true"]:hover{
 }
 
 html{
-	background: #fff;
+	background: #fffacd !important;
 	margin: 0 auto;
 	padding: 0;
 	line-height:1.4;
@@ -1412,28 +1397,29 @@ a.unread_alert{
 				キャッチコピー
 ------------------------------------------------------*/
 
+div#header_copy {
+	height: auto;
+}
+
 div#header_copy  img{
-	margin: 0 auto;
-display: block;
-padding: 0;
-width: 85%;
-border-radius: 5px;
-}	
-
-
-
+/*	margin: -10px auto;
+	display: block;
+	padding: 0;
+	border-radius: 5px;*/
+}
 
 /*ヘッダーイメージ*/
 .header_img_navi{
 	width: 100%;
+	height: auto;
+	margin: 10px auto 0 auto;
 }
 
 .header_img_navi img{
-	width:100%;
+	width: 100%;
 	height: auto;
 	margin: 0;
 }
-
 
 /* ヘッダーフォーム */
 
@@ -1541,8 +1527,8 @@ nav ul,li	{
 	padding:0;
 	list-style: none;
 }
-nav .navi	{
-	width: 99%;
+nav .navi{
+	margin: 0 2px 0 0;
 	display: block;
 }
 nav li{
@@ -1585,7 +1571,7 @@ nav li a:hover{
 }  
 
 div.header_img_navi_contents{
-	margin-top: 20px;
+/*	margin-top: 20px;*/
 }
 
 /*サーチバー*/
@@ -1696,9 +1682,8 @@ select#cat{
 
 div.whats-tex-button{
 	background-color: #fff;
-	padding: 3px auto;
-	margin: 40px 0 10px 0;
-	}
+	margin: 0 0 0 0;
+}
 
 a.whats-tex-button{
 	width:90%;
